--- a/index.html
+++ b/index.html
@@ -6,8 +6,17 @@
     <title>Building Grits</title>
 </head>
 <body>
-<p>
-    Building GRITS: Ghost Riders in the Sky (as interpreted through the 1650 Scottish Metrical Psalter) was a total joy.
-</p>
+<p>Building GRITS: Ghost Riders in the Sky (as interpreted through the 1650 Scottish Metrical Psalter was a total joy.</p>
+<p>Strictly speaking, the inspiration was a school assignment: the theme -- Lost in Space.</p>
+<p>A cynical person (with deep insight into my own mind) might suggest that I simply thought to myself, how could I possibly shoehorn in one of the domain names that I already own? And that is how the idea for this project's realization of MetricalPsalms.com came to be.</p>
+<p>But the truth is, I loved the image of people marveling at the sky to the tune of the classic song.</p>
+<p>And the story of the 1650 Scottish Metrical Psalter is a great one: </p>
+<p>In 1650, they published a volume of psalms, faithfully translated into Early Modern English verse -- mostly in common meter, or what we often call ballad meter. To them, it represented an answer to the question: how can we find something to sing together on Sundays? They did not want to make up new songs, and they did not want to chant. </p>
+<p>Committees were formed, and submissions were made, and edited, and made again.</p>
+<p>The goal was to create not a paraphrase, but instead a strict translation that happened to fall into common meter and, often, rhyme.</p>
+<p>There are a lot of amazing songs that fit the meter presented in this book that is almost 375 years old. This project is just the start of something really great.</p>
+<p>The API of this project is a really nice part of it: it allows you to retrieve the stanzas of a psalm, a link to an appropriately-timed music file to fit it, and the appropriate timestamps with which to display and/or sing along to it.</p>
+
+
 </body>
 </html>
